PCS BAckup 26Dec2023/Backup-Source/objects/GCP_VIR_Report__c.object
<CustomObject>
    <fields>
        <fullName>Vision_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GCP VIR Report</relationshipLabel>
        <relationshipName>GCP_VIR_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Agreement_Number__c</fullName>
        <label>Agreement Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>GCP VIR Report</relationshipLabel>
        <relationshipName>GCP_VIR_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Data_Available_Till__c</fullName>
        <label>Data Available Till</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Agreement__c</fullName>
        <label>GCP Agreement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Credit_Sales__c</fullName>
        <label>GCP Credit Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Customer_Code__c</fullName>
        <label>GCP Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Customer__c</fullName>
        <label>GCP Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_End_Date__c</fullName>
        <label>GCP End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Indirect_Sales__c</fullName>
        <label>GCP Indirect Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Month_Text__c</fullName>
        <label>GCP Month Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Month__c</fullName>
        <label>GCP Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Net_Sales__c</fullName>
        <label>GCP Net Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Start_Date__c</fullName>
        <label>GCP Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Tenure__c</fullName>
        <label>GCP Tenure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Unique_Identifier__c</fullName>
        <label>GCP Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Update_Date__c</fullName>
        <description>This field is when GCP is pulling their data</description>
        <label>Data Lake Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Vistex_Sales__c</fullName>
        <label>GCP Vistex Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Year__c</fullName>
        <label>GCP Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Gcp_Direct_Sales__c</fullName>
        <label>Gcp Direct Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Net_Contract__c</fullName>
        <label>Net Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Update_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vision Update Date</label>
        <type>Date</type>
    </fields>
    <label>GCP VIR Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vision_GCP_Start_Date__c</columns>
        <columns>Vision_GCP_End_Date__c</columns>
        <columns>Vision_GCP_Month_Text__c</columns>
        <columns>Vision_Update_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vision_Account__c</field>
            <operation>equals</operation>
            <value>Walgreen Company</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GCP VIR Report-{0000000}</displayFormat>
        <label>GCP VIR Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP VIR Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>